--- a/resource/static/views/files/index.js.html
+++ b/resource/static/views/files/index.js.html
@@ -68,7 +68,8 @@
 img.mirror {
                 -webkit-box-reflect: below 4px -webkit-gradient(linear, left top, left bottom,  from(transparent), color-stop(0%, transparent), to(rgba(255, 255, 255, 0.21)));
 
-                max-width:100px;
+                max-width:140px;
+                max-height:140px;
                 margin:10px;
 
             }
